[package]
name = "ruestung"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde_urlencoded = "0.7"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
